--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname:   malorydodge
 email:              malorydodge@gmail.com
 #twitter:           username
 #facebook:           username
-github-url:         http://github.com/malorydodge
+github-url:         malorydodge
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
